--- a/ITMD_565/Lab5/dbarndt_lab5.html
+++ b/ITMD_565/Lab5/dbarndt_lab5.html
@@ -79,8 +79,8 @@
     var y = 0;
     var r = 0;
     var dr = 1;
-    var radius = 0;
-    var newrad = 2;
+    var radius = 50;
+    var newrad = 6;
 
     var canvas = document.getElementById("myCanvas");
     
@@ -148,26 +148,26 @@
 
       // Draw arc shape
       ctx.save();
-      ctx.translate(345, 225);
+      ctx.translate(300, 170);
       ctx.rotate((Math.PI / 180) * radius);
       ctx.beginPath();
       //ctx.arc(295, 180, 50, 1.5 * Math.PI, 0.3 * Math.PI);
-      ctx.arc(-49, -49, 50, 1.5 * Math.PI, 0.3 * Math.PI);
+      ctx.arc(0, 0, 50, 1.5 * Math.PI, 0.3 * Math.PI);
       ctx.lineWidth = 15;
       ctx.strokeStyle = "#FFA500";
       ctx.stroke();
       ctx.restore();
       radius = radius + newrad;
 
-      // Draw outer square and rotate it
+      // Draw outer square, inner square, and rotate it
       ctx.save();
-      ctx.translate(500, 178);
+      ctx.translate(500, 180);
       ctx.rotate((Math.PI / 180) * r);
       ctx.beginPath();
       ctx.lineWidth = 10;
       ctx.fillStyle = "#C80000";
       ctx.strokeStyle = "#FFFFFF";
-      ctx.rect(-49, -49, 98, 98);
+      ctx.rect(-50, -50, 100, 100);
       ctx.stroke();
       ctx.fill();
       ctx.restore();
