--- a/ITMD_565/lab6/lab6files/lab6.3.html
+++ b/ITMD_565/lab6/lab6files/lab6.3.html
@@ -74,9 +74,9 @@
     class ProductComponent extends React.Component {
         render(){
             return (
-                <img>{this.props.image}</img>
-                <h2>{this.props.name}</h2>
-                <p>{this.props.desc}</p>
+                <img src={this.props.prod_img} />,
+                <h2>{this.props.prod_name}</h2>,
+                <p>{this.props.prod_description}</p>
             );
         }
     }
