--- a/ITMD_565/lab6/lab6files/lab6.3.html
+++ b/ITMD_565/lab6/lab6files/lab6.3.html
@@ -71,6 +71,8 @@
     };
 
     // Put class based Product component here
+    
+    // Create class Product to create a div element to render the three elements in product
     class Product extends React.Component {
         render(){
             return (
